--- a/train/fsdp_config_qwen.json
+++ b/train/fsdp_config_qwen.json
@@ -1,1 +1,2 @@
-{"transformer_layer_cls_to_wrap": "Qwen2DecoderLayer"}
+{"transformer_layer_cls_to_wrap": "Qwen2DecoderLayer",
+"fsdp_activation_checkpointing": true}
